# succ_nix

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: ci.yml
notes/: function_union.md
src/: ast.rs  builtins.rs  context.rs  domain.rs  hir.rs  lib.rs  main.rs  parser.rs  span.rs  typing.rs
src/domain/: attr_set.rs  boolean.rs  fun.rs  integer.rs  list.rs  null.rs  path.rs  string.rs  var.rs
src/parser/: term.lalrpop  term.rs
tests/: insta.rs
tests/corpus/: simple.nix  trivial.nix  trivial.nix.skip
tests/snapshots/: insta__insta@asserts.nix.snap  insta__insta@simple.nix.snap
