[package]
name = "succ_nix"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"
rnix = "0.9.0"
tracing = "0.1.26"

[dev-dependencies]
insta = { version = "1.7.1", features = ["glob"] }
tracing-subscriber = "0.2.18"

[profile.release]
# debug info
debug = true
